# Glitch-Mint-Logo

./: .gitignore  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  README.md  build-deb.sh  cppcheck.sh  debug.sh  next.sh  socket-clients.sh  socket-debug.sh  умные мысли разраба
deb/DEBIAN/: conffiles  control  dirs  md5sums  postinst  postrm  prerm
deb/etc/glitch-mint-logo/: config  notifier-services.list
deb/etc/systemd/system/: glitch-mint-logo-halt.service  glitch-mint-logo-poweroff.service  glitch-mint-logo-reboot.service  glitch-mint-logo-start.service  glitch-mint-logo-stop.service  gml-halt.service  gml-notifier-cron.service  gml-notifier-dbus.service  gml-notifier-graphical.service  gml-notifier-keyboard-setup.service  gml-notifier-network.service  gml-notifier-polkit.service  gml-notifier-remote-fs.service  gml-notifier-systemd-journald.service  gml-notifier-systemd-logind.service  gml-notifier-systemd-timesyncd.service  gml-notifier-systemd-udevd.service  gml-poweroff.service  gml-reboot.service  gml-start.service  gml-stop.service
resources/: gml-notifier.template  services.list
src/: args.c  args.h  common.c  common.h  draw.c  draw.h  drm.c  drm.h  drm_fb.c  drm_fb.h  freetype_include.h  main.c  metric.h  modules.c  modules.h  png_reader.c  read_config.c  read_config.h  read_png.c  read_png.h  signal_handlers.c  signal_handlers.h  start.c  start.h  util.c  util.h
src/gml-3d-experimental/: 3d_math.h  3d_math_inline.h  draw.c  module.h  resources.c
src/gml-glitch-logo/: draw.c  module.h  resources.c
src/gml-katana/: draw.c  module.h  resources.c
src/gml-matrix/: draw.c  module.h  resources.c
src/gml-mint-logo/: draw.c  module.h  resources.c
src/gml-pixel-logo/: module.h  resources.c
src/gml-pixels/: draw.c  module.h  resources.c
src/gml-processor/: draw.c  module.h  resources.c
src/gml-wave/: draw.c  module.h  resources.c
src/gml-yorha/: draw.c  module.h  resources.c  sd_bus_resources.c  services.c  util.c
src/matrix/: draw.c  resources.c
src/mint-logo/: draw.c  module.h  read_png.c  resources.c
src/template/: draw.c  module.h  resources.c
src/util/: bitset2d.c  bitset2d.h  get_system_name.h  load_font.c  load_font.h  random.h  read_png.c  read_png.h  render_glyph.c  render_glyph.h  render_glyth.c  render_glyth.h  system_info.c  system_info.h  util.h
src/wave/: draw.c  module.h  resources.c
